// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test routes listing routes should create new listing /listings 1`] = `
{
  "data": {
    "chainId": "11155111",
    "minPriceCents": "150000",
    "nftContract": "0xf44b599a0aB6b8cb14E992994BEC0dc59dF883B2",
    "nonce": "0",
    "owner": "0x3897326cEda92B3da2c27a224D6fDCFefCaCf57A",
    "signature": {
      "r": "0x5ef4620f4b296763ff15209456d75e868f149a8d1c6821f1ff11fab70bca0ee0",
      "s": "0x337ddcb26ea919a2bf5ad6e1d49bd6951a27d1d2e940a5543a70eabc5dbe237e",
      "v": 28,
    },
    "tokenId": "1",
  },
}
`;

exports[`test routes listing routes should return listings /listings 1`] = `
{
  "data": {
    "currentPage": 1,
    "nextPage": null,
    "prevPage": null,
    "results": [
      {
        "chainId": "11155111",
        "minPriceCents": "150000",
        "nftContract": "0xf44b599a0aB6b8cb14E992994BEC0dc59dF883B2",
        "nonce": "0",
        "owner": "0x3897326cEda92B3da2c27a224D6fDCFefCaCf57A",
        "signature": {
          "r": "0x5ef4620f4b296763ff15209456d75e868f149a8d1c6821f1ff11fab70bca0ee0",
          "s": "0x337ddcb26ea919a2bf5ad6e1d49bd6951a27d1d2e940a5543a70eabc5dbe237e",
          "v": 28,
        },
        "tokenId": "1",
      },
    ],
    "total": 1,
    "totalPages": 1,
  },
}
`;

exports[`test routes test bid routes should create new bid /bids 1`] = `
{
  "data": {
    "bidder": "0xE98D94496aB9084f597a69978b593EBf83147335",
    "listing": {
      "chainId": "11155111",
      "minPriceCents": "150000",
      "nftContract": "0xf44b599a0aB6b8cb14E992994BEC0dc59dF883B2",
      "nonce": "0",
      "owner": "0x3897326cEda92B3da2c27a224D6fDCFefCaCf57A",
      "signature": {
        "r": "0x5ef4620f4b296763ff15209456d75e868f149a8d1c6821f1ff11fab70bca0ee0",
        "s": "0x337ddcb26ea919a2bf5ad6e1d49bd6951a27d1d2e940a5543a70eabc5dbe237e",
        "v": 28,
      },
      "tokenId": "1",
    },
    "signature": {
      "r": "0x1469ac6f9636c24d2d8c3fb2cbef73708876e15f23f23b1d33863939c905a21c",
      "s": "0x7d9a7ea039465c928311bcb737b23153232028038beadba2a667aa720f17602b",
      "v": 28,
    },
    "tokenAddress": "0xc29f6F8D639eF187DcFEfeFBaD989cF2C941a23A",
    "validUntil": "1735504160",
    "value": "250",
  },
}
`;

exports[`test routes test bid routes should return bids /bids 1`] = `
{
  "data": {
    "currentPage": 1,
    "nextPage": null,
    "prevPage": null,
    "results": [
      {
        "bidder": "0xE98D94496aB9084f597a69978b593EBf83147335",
        "listing": {
          "chainId": "11155111",
          "minPriceCents": "150000",
          "nftContract": "0xf44b599a0aB6b8cb14E992994BEC0dc59dF883B2",
          "nonce": "0",
          "owner": "0x3897326cEda92B3da2c27a224D6fDCFefCaCf57A",
          "signature": {
            "r": "0x5ef4620f4b296763ff15209456d75e868f149a8d1c6821f1ff11fab70bca0ee0",
            "s": "0x337ddcb26ea919a2bf5ad6e1d49bd6951a27d1d2e940a5543a70eabc5dbe237e",
            "v": 28,
          },
          "tokenId": "1",
        },
        "signature": {
          "r": "0x1469ac6f9636c24d2d8c3fb2cbef73708876e15f23f23b1d33863939c905a21c",
          "s": "0x7d9a7ea039465c928311bcb737b23153232028038beadba2a667aa720f17602b",
          "v": 28,
        },
        "tokenAddress": "0xc29f6F8D639eF187DcFEfeFBaD989cF2C941a23A",
        "validUntil": "1735504160",
        "value": "250",
      },
    ],
    "total": 1,
    "totalPages": 1,
  },
}
`;
